# ember

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  feature_extraction.ipynb  package-lock.json  poetry.toml  pyproject.toml  release.config.js  requirements.txt  setup.py
.github/workflows/: check.yml  deploy-image.yml  deploy.yml
ember/: __init__.py  feature_extraction.py  features.py
resources/: ember-notebook.ipynb  ember2018-notebook.ipynb
scripts/: classify_binaries.py  init_ember.py
tests/: bundle_hello_world_to_pe.sh  docker-compose.yaml  hello_world.py  test_dataset_shape.py  test_math.py
