[tool.poetry]
name = "EMBER__Wdis"
packages = [
    { include = "ember" },
]
version = "1.2.1"
description = "Elastic Malware Benchmark for Empowering Researchers "
authors = ["Luca Fabri <luca.fabri1999@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.8.0"
mypy = "^1.15.0"
ruff = "^0.11.6"
pytest = "^8.3.5"
tqdm = "^4.0"
pandas = "^2.0"
numpy = "^2.0.0"
lief = "^0.16.5"
scikit-learn = "^1.6.1"
lightgbm = "^4.6.0"

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy ember tests"
compile = "python -m compileall ember tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
